# dronemanager

./: .gitignore  .readthedocs.yaml  README.md  config.json  image_utils.py  pyproject.toml  udp_dummyclient.py  windows_setup.py
docs/: conf.py  dev_guides.rst  holodeck.rst  index.rst  installation.rst  usage.rst
docs/api/: dronemanager.rst  index.rst  mission.rst  navigation.rst  plugin.rst  sensor.rst  utils.rst
src/dronemanager/: app.py  core.py  drone.py  dronemanager.py  mavpassthrough.py  plugin.py  utils.py  widgets.py
src/dronemanager/missions/: engel.py  uam.py
src/dronemanager/navigation/: GMP3.py  core.py  directsetpointfollower.py  directtargetgenerator.py  gmp3generator.py  rectlocalfence.py  ruckigfollower.py  velocityfollower.py
src/dronemanager/plugins/: camera.py  controllers.py  external.py  gimbal.py  mission.py  optitrack.py  scripts.py  sensor.py  stream.py
src/dronemanager/plugins/NatNet/: NatNetClient.py
src/dronemanager/sensors/: ecowitt.py
